--- a/package.json
+++ b/package.json
@@ -1,27 +1,37 @@
 {
-  "name": "craftedui",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "next": "14.2.3",
-    "react": "^18",
-    "react-dom": "^18"
-  },
-  "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.4.19",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.3",
-    "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.3",
-    "typescript": "^5"
-  }
+	"name": "craftedui",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"prettier": "prettier --check .",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@tailwindcss/typography": "^0.5.13",
+		"clsx": "^2.1.1",
+		"next": "14.2.3",
+		"next-themes": "^0.3.0",
+		"react": "^18",
+		"react-dom": "^18",
+		"tailwindcss-hocus": "^0.0.7"
+	},
+	"devDependencies": {
+		"@types/node": "^20",
+		"@types/react": "^18",
+		"@types/react-dom": "^18",
+		"@typescript-eslint/eslint-plugin": "^7.12.0",
+		"@typescript-eslint/parser": "^7.12.0",
+		"autoprefixer": "^10.4.19",
+		"eslint": "^8",
+		"eslint-config-next": "14.2.3",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-react": "^7.34.2",
+		"postcss": "^8.4.38",
+		"prettier": "^3.3.1",
+		"tailwindcss": "^3.4.3",
+		"typescript": "^5"
+	}
 }
