--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@headlessui/react": "^2.0.4",
 		"@tailwindcss/typography": "^0.5.13",
 		"clsx": "^2.1.1",
 		"next": "14.2.3",
 		"next-themes": "^0.3.0",
 		"react": "^18",
 		"react-dom": "^18",
+		"tailwind-merge": "^2.3.0",
 		"tailwindcss-hocus": "^0.0.7"
 	},
 	"devDependencies": {
