--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@headlessui/react": "^2.0.4",
 		"@tailwindcss/typography": "^0.5.13",
 		"clsx": "^2.1.1",
+		"framer-motion": "^11.2.10",
 		"next": "14.2.3",
 		"next-themes": "^0.3.0",
 		"react": "^18",
