--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
 	},
 	"dependencies": {
 		"@headlessui/react": "^2.0.4",
+		"@mdx-js/loader": "^3.0.1",
+		"@mdx-js/react": "^3.0.1",
+		"@next/mdx": "^14.2.3",
 		"@tailwindcss/typography": "^0.5.13",
+		"@types/mdx": "^2.0.13",
 		"clsx": "^2.1.1",
 		"framer-motion": "^11.2.10",
 		"next": "14.2.3",
