--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
 		"framer-motion": "^11.2.10",
 		"next": "14.2.3",
 		"next-themes": "^0.3.0",
+		"raw-loader": "^4.0.2",
 		"react": "^18",
 		"react-dom": "^18",
+		"react-syntax-highlighter": "^15.5.0",
 		"tailwind-merge": "^2.3.0",
 		"tailwindcss-hocus": "^0.0.7"
 	},
@@ -30,6 +32,7 @@
 		"@types/node": "^20",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
+		"@types/react-syntax-highlighter": "^15.5.13",
 		"@typescript-eslint/eslint-plugin": "^7.12.0",
 		"@typescript-eslint/parser": "^7.12.0",
 		"autoprefixer": "^10.4.19",
