--- a/.eslintrc
+++ b/.eslintrc
@@ -1,12 +1,11 @@
 {
-	"name": "craftedui",
 	"extends": [
-		"eslint:recommended",
-		"plugin:react/recommended",
-		"plugin:@typescript-eslint/recommended",
-		"plugin:react/jsx-runtime",
-		"prettier",
-		"next/core-web-vitals"
+		// "eslint:recommended",
+		// "plugin:react/recommended",
+		// "plugin:@typescript-eslint/recommended",
+		// "plugin:react/jsx-runtime",
+		// "prettier",
+		// "next/core-web-vitals"
 	],
 	"overrides": [],
 	"parser": "@typescript-eslint/parser",
@@ -14,7 +13,6 @@
 		"ecmaVersion": "latest",
 		"sourceType": "module"
 	},
-	"files": ["./src/**/*.{js,ts,jsx,tsx,mdx}"],
 	"plugins": ["react", "@typescript-eslint"],
 	"rules": {
 		"@typescript-eslint/no-unused-vars": 0
